<resources>
    <string name="app_name">android-homework</string>
    <string name="activity_entity_relation">关系：</string>
    <string name="activity_entity_property">属性：</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="activity_entity_relate_problems">相关题目：</string>
    <string name="submit">提交</string>
    <string name="answer_input_hint">请输入答案</string>
    <string name="extract_hint">请输入希望提取知识点的内容</string>
    <string name="upload">上传</string>
    <string name="extract_result">识别结果如下：</string>
    <string name="camera">拍照上传</string>
    <string name="take_photo">拍照</string>
    <string name="from_album">从相册选择</string>
    <string name="chinese">语文</string>
    <string name="math">数学</string>
    <string name="english">英语</string>
    <string name="physics">物理</string>
    <string name="chemistry">化学</string>
    <string name="biology">生物</string>
    <string name="geo">地理</string>
    <string name="history">历史</string>
    <string name="politics">政治</string>
    <string name="finish">完成</string>
    <string name="editFavourite">收藏至：</string>
    <string name="addNewDirectory">添加新收藏夹</string>
    <string name="newDirectoryHint">请输入新收藏夹名称</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="generateProblems">生成试题</string>
    <string name="generateMap">生成复习提纲</string>
    <string name="deleteDirectory">删除文件夹</string>
    <string name="pleaseLogin">请先登录！</string>
    <string name="checkFavourite">收藏管理</string>
    <string name="moveFavourite">移动</string>
    <string name="selectAll">全选</string>
    <string name="copy">复制</string>
    <string name="deleteItems">删除</string>
    <string name="hint_enter_a_message">add something here:</string>
    <string name="returnOnline">返回在线模式</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>