<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/camera_layout"
    android:background="@drawable/white_radius"
    android:layout_margin="10dp"
    style="?buttonBarStyle">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chinese"
        android:id="@+id/chinese"
        style="?buttonBarButtonStyle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/math"
        android:id="@+id/math"
        style="?buttonBarButtonStyle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:id="@+id/english"
        style="?buttonBarButtonStyle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/physics"
        android:id="@+id/physics"
        style="?buttonBarButtonStyle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chemistry"
        android:id="@+id/chemistry"
        style="?buttonBarButtonStyle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biology"
        android:id="@+id/biology"
        style="?buttonBarButtonStyle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geo"
        android:id="@+id/geo"
        style="?buttonBarButtonStyle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/politics"
        android:id="@+id/politics"
        style="?buttonBarButtonStyle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:id="@+id/history"
        style="?buttonBarButtonStyle"/>

</LinearLayout>