<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DirectoryFragment"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/topBar">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?buttonBarButtonStyle"
            android:layout_weight="1"
            android:id="@+id/btnGenerateProblems"
            android:text="@string/generateProblems"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?buttonBarButtonStyle"
            android:layout_weight="1"
            android:id="@+id/btnGenerateMap"
            android:text="@string/generateMap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnDeleteDirectory"
            style="?buttonBarButtonStyle"
            android:text="@string/deleteDirectory"/>
    </LinearLayout>
    <com.yanzhenjie.recyclerview.SwipeRecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/directoryNameList"
        android:layout_below="@id/topBar"
        android:layout_above="@id/bottomBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:id="@+id/bottomBar"
        android:visibility="gone"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?buttonBarButtonStyle"
            android:text="@string/selectAll"
            android:id="@+id/btnSelectAll"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?buttonBarButtonStyle"
            android:text="@string/moveFavourite"
            android:id="@+id/btnMoveFavourite"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?buttonBarButtonStyle"
            android:text="@string/deleteItems"
            android:id="@+id/btnDeleteItems"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?buttonBarButtonStyle"
            android:text="@string/finish"
            android:id="@+id/btnFinish"/>
    </LinearLayout>

</RelativeLayout>