<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PointExtractActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/extract_text_input"
            android:hint="@string/extract_hint"
            android:minHeight="150dp"
            android:gravity="top"
            android:autofillHints=""
            android:inputType="textMultiLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?buttonBarStyle">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/upload"
                android:id="@+id/btn_upload"
                style="?buttonBarButtonStyle"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                style="?buttonBarButtonStyle"
                android:id="@+id/camera"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:visibility="gone"
            android:text="@string/extract_result"
            android:id="@+id/result_tag"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:id="@+id/extract_result"
            android:visibility="gone"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_photo"/>
    </LinearLayout>

</ScrollView>