<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_radius"
    android:maxHeight="400dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/editFavourite"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <Button
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/addNewDirectory"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:id="@+id/bottomAddNewFavourite"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.java.cuiyikai.widgets.ListViewForScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/bottomFavouriteListView"/>
    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:text="@string/finish"
        android:layout_gravity="end"
        android:id="@+id/buttonBottomFinish"
        style="?buttonBarButtonStyle"/>
</LinearLayout>