<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EntityActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/titleSection"
            android:layout_alignParentTop="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:id="@+id/entityTitle"
                android:textSize="40sp"
                android:singleLine="false"
                android:maxWidth="300dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/favouriteButton"
                android:background="@drawable/star_yellow_16"
                android:maxWidth="@dimen/size_16sp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/titleSection"
            android:id="@+id/relationSection">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_entity_relation"
                android:textSize="20sp"/>
            <ImageButton
                android:layout_marginTop="5dp"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_radius"
                android:id="@+id/relationButton"
                android:layout_gravity="center"/>
        </LinearLayout>

        <com.java.cuiyikai.widgets.ListViewForScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relationsView"
            android:divider="#00000000"
            android:dividerHeight="3dp"
            android:layout_below="@id/relationSection"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/propertySection"
            android:layout_below="@id/relationsView">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_entity_property"
                android:textSize="20sp"/>
            <ImageButton
                android:layout_marginTop="5dp"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_radius"
                android:id="@+id/propertyButton"
                android:layout_gravity="center"/>
        </LinearLayout>

        <com.java.cuiyikai.widgets.ListViewForScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/propertiesView"
            android:divider="#00000000"
            android:dividerHeight="3dp"
            android:layout_below="@id/propertySection"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/problemsSection"
            android:layout_below="@id/propertiesView">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_entity_relate_problems"
                android:textSize="20sp"/>
            <ImageButton
                android:layout_marginTop="5dp"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_radius"
                android:id="@+id/problemButton"
                android:layout_gravity="center"/>
        </LinearLayout>


        <com.java.cuiyikai.widgets.ListViewForScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/problemsView"
            android:divider="#00000000"
            android:dividerHeight="3dp"
            android:layout_below="@id/problemsSection"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</ScrollView>